--- a/styles.css
+++ b/styles.css
@@ -66,19 +66,20 @@ body{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 0px;
-  width: 40%;
+  margin-top: 2px;
+  width: 35%;
   height:auto;
 }
 
 .text_area{
   background-color: white;
+  border-radius: 5%;
   margin-left: 20%;
   margin-right: 20%;
   padding-top: 30px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-bottom: 50px;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-bottom: 70px;
   font-size: large;
   line-height: 30px;
 }
